--- a/deploy/kubernetes/complete-demo.yaml
+++ b/deploy/kubernetes/complete-demo.yaml
@@ -52,8 +52,8 @@ spec:
         - name: tmp-volume
           emptyDir:
             medium: Memory
-      nodeSelector:
-        beta.kubernetes.io/os: linux
+      # nodeSelector:
+      #   beta.kubernetes.io/os: linux
 ---
 apiVersion: v1
 kind: Service
@@ -111,8 +111,8 @@ spec:
         - name: tmp-volume
           emptyDir:
             medium: Memory
-      nodeSelector:
-        beta.kubernetes.io/os: linux
+      # nodeSelector:
+      #   beta.kubernetes.io/os: linux
 ---
 apiVersion: v1
 kind: Service
@@ -182,8 +182,8 @@ spec:
             port: 80
           initialDelaySeconds: 180
           periodSeconds: 3
-      nodeSelector:
-        beta.kubernetes.io/os: linux
+      # nodeSelector:
+      #   beta.kubernetes.io/os: linux
 ---
 apiVersion: v1
 kind: Service
@@ -230,8 +230,8 @@ spec:
         ports:
         - name: mysql
           containerPort: 3306
-      nodeSelector:
-        beta.kubernetes.io/os: linux
+      # nodeSelector:
+      #   beta.kubernetes.io/os: linux
 ---
 apiVersion: v1
 kind: Service
@@ -297,8 +297,8 @@ spec:
             port: 8079
           initialDelaySeconds: 30
           periodSeconds: 3
-      nodeSelector:
-        beta.kubernetes.io/os: linux
+      # nodeSelector:
+      #   beta.kubernetes.io/os: linux
 ---
 apiVersion: v1
 kind: Service
@@ -366,8 +366,8 @@ spec:
         - name: tmp-volume
           emptyDir:
             medium: Memory
-      nodeSelector:
-        beta.kubernetes.io/os: linux
+      # nodeSelector:
+      #   beta.kubernetes.io/os: linux
 ---
 apiVersion: v1
 kind: Service
@@ -425,8 +425,8 @@ spec:
         - name: tmp-volume
           emptyDir:
             medium: Memory
-      nodeSelector:
-        beta.kubernetes.io/os: linux
+      # nodeSelector:
+      #   beta.kubernetes.io/os: linux
 ---
 apiVersion: v1
 kind: Service
@@ -493,8 +493,8 @@ spec:
             port: 80
           initialDelaySeconds: 180
           periodSeconds: 3
-      nodeSelector:
-        beta.kubernetes.io/os: linux
+      # nodeSelector:
+      #   beta.kubernetes.io/os: linux
 ---
 apiVersion: v1
 kind: Service
@@ -545,8 +545,8 @@ spec:
             memory: 300Mi
         ports:
         - containerPort: 80
-      nodeSelector:
-        beta.kubernetes.io/os: linux
+      # nodeSelector:
+      #   beta.kubernetes.io/os: linux
 ---
 apiVersion: v1
 kind: Service
@@ -607,8 +607,8 @@ spec:
         ports:
         - containerPort: 9090
           name: exporter
-      nodeSelector:
-        beta.kubernetes.io/os: linux
+      # nodeSelector:
+      #   beta.kubernetes.io/os: linux
 ---
 apiVersion: v1
 kind: Service
@@ -667,8 +667,8 @@ spec:
               - SETGID
               - SETUID
           readOnlyRootFilesystem: true
-      nodeSelector:
-        beta.kubernetes.io/os: linux
+      # nodeSelector:
+      #   beta.kubernetes.io/os: linux
 ---
 apiVersion: v1
 kind: Service
@@ -735,8 +735,8 @@ spec:
         - name: tmp-volume
           emptyDir:
             medium: Memory
-      nodeSelector:
-        beta.kubernetes.io/os: linux
+      # nodeSelector:
+      #   beta.kubernetes.io/os: linux
 ---
 apiVersion: v1
 kind: Service
@@ -809,8 +809,8 @@ spec:
             port: 80
           initialDelaySeconds: 180
           periodSeconds: 3
-      nodeSelector:
-        beta.kubernetes.io/os: linux
+      # nodeSelector:
+      #   beta.kubernetes.io/os: linux
 ---
 apiVersion: v1
 kind: Service
@@ -870,8 +870,8 @@ spec:
         - name: tmp-volume
           emptyDir:
             medium: Memory
-      nodeSelector:
-        beta.kubernetes.io/os: linux
+      # nodeSelector:
+      #   beta.kubernetes.io/os: linux
 ---
 apiVersion: v1
 kind: Service
